--- a/project/index.html
+++ b/project/index.html
@@ -114,6 +114,54 @@
             </div>
 
         </section>
+       <section class="page_3">
+        <div class="page3_wrapper">
+            <div class="omg_page_3"><img src="/img/avatar 2.png" alt=""></div>
+            <div class="Text_page_3">
+                
+                <h1> <span>Рад вас видеть</span> <br>Я Артем Исламов</h1>
+                <p>Я разрабатываю сайты для людей и компаний. Делаю всё сам: составляю прототип, дизайн-макет, пишу код.</p>
+                <h2>Код, Дизайн, Обучение</h2>
+                <p>Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть: 
+Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
+<img src="/img/image 4.png" alt="">
+            </div>
+        </div>
+       <div class="wrat">
+         <div class="Program_scill">
+            <h1>Работаю с разными языками и инструментами</h1>
+            <div class="programs">
+            <span>HTML</span>
+            <span>CSS</span>
+             <span>JavaScript</span>
+            <span>Git</span>
+            <span>Vitejs</span>
+            </div>
+        </div>
+       </div>
+       </section>
+       <section class="writting">
+        <div class="writting_header">
+           
+            <div class="email">
+                <form action="/#">
+                     <h1>Готов обсудить проект...</h1>
+                    <label for="Text">Имя</label>
+                    <input type="text" name="Text" id="Text" required minlength="5" maxlength="100">
+                    <label for="">Email</label>
+                    <input type="email" name="email" id="email" required minlength="5" maxlength="100">
+                    <label for="text_area">сообщение</label>
+                   <textarea name="text_area" id="text_area" ></textarea>
+                  <div class="sumbit">
+                     <button type="submit"><img src="/img/icon4.png" alt="">Отправить</button>
+                  </div>
+                </form>
+            </div>
+        </div>
+       </section>
     </main>
+    <footer class="footer">
+        <span class="footer_span">Сделано с ❤️ в Казани</span>
+    </footer>
 </body>
 </html>
