--- a/project/index.html
+++ b/project/index.html
@@ -148,12 +148,12 @@ Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
                      <h1>Готов обсудить проект...</h1>
                     <label for="Text">Имя</label>
                     <input type="text" name="Text" id="Text" required minlength="5" maxlength="100">
-                    <label for="">Email</label>
+                    <label for="email">Email</label>
                     <input type="email" name="email" id="email" required minlength="5" maxlength="100">
-                    <label for="text_area">сообщение</label>
+                    <label for="text_area">Cообщение</label>
                    <textarea name="text_area" id="text_area" ></textarea>
                   <div class="sumbit">
-                     <button type="submit"><img src="/img/icon4.png" alt="">Отправить</button>
+                     <button type="submit"><img src="/img/icon4.png" alt="" class="img_3">Отправить</button>
                   </div>
                 </form>
             </div>
