--- a/project/index.html
+++ b/project/index.html
@@ -32,15 +32,15 @@
         <section class="wrapper">
             <div class="section_top">
                 <div class="img">
-                    <a href=""><img src="/img/sticker 1.png" alt=""></a>
+                    <a href=""><img src="/img/Drop your Memoji here.png" alt="" class="img_page1"></a>
                 </div>
                 <div class="img_text">
                     <h1>Привет 👋</h1>
-                    <p><span class="span_global">Я фронтенд-разработчик и веб-дизайнер </span> <br>Меня зовут Артем Исламов и я делаю сайты <br> для людей и компаний</p>
+                    <p><span class="span_global">Я фронтенд-разработчик и веб-дизайнер </span> <br>Меня зовут Денис Шило и я делаю сайты <br> для людей и компаний</p>
                     <div class="Social_link">
                         <div class="social">
                             <a href=""><img src="/img/Icons _ Social.png" alt=""></a>
-                            <a href=""><img src="/img/2.png" alt=""></a>
+                            <a href="https://t.me/signals90procent"><img src="/img/2.png" alt=""></a>
                               <a href=""><img src="/img/3.png" alt=""></a>
                                   <a href=""><img src="/img/4.png" alt=""></a>
                                    <a href=""><img src="/img/5.png" alt=""></a>
