--- a/project/index.html
+++ b/project/index.html
@@ -41,13 +41,14 @@
                         <div class="social">
                             <a href=""><img src="/img/Icons _ Social.png" alt=""></a>
                             <a href="https://t.me/signals90procent"><img src="/img/2.png" alt=""></a>
-                              <a href=""><img src="/img/3.png" alt=""></a>
+                              <a href="https://github.com/Denchikkss/My_project"><img src="/img/3.png" alt=""></a>
                                   <a href=""><img src="/img/4.png" alt=""></a>
-                                   <a href=""><img src="/img/5.png" alt=""></a>
+                                   <a href="youtube.com"><img src="/img/5.png" alt=""></a>
                         </div>
                         <div class="link_bit">
                              <a href=""><img src="/img/6.png" alt="" class="img_link"></a>
-                             <span>Скачать резюме </span>
+                             <span><a href="/DOCUMENT/murakami-kharuki-norvezkyy-lis8262.pdf">Скачать резюме</a></span>
+                             
                         </div>
                     </div>
                 </div>
@@ -124,7 +125,7 @@
                 <h2>Код, Дизайн, Обучение</h2>
                 <p>Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть: 
 Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
-<img src="/img/image 4.png" alt="">
+<img src="/img/pod.png" alt="">
             </div>
         </div>
        <div class="wrat">
@@ -142,18 +143,26 @@ Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
        </section>
        <section class="writting">
         <div class="writting_header">
-           
             <div class="email">
                 <form action="/#">
                      <h1>Готов обсудить проект...</h1>
-                    <label for="Text">Имя</label>
-                    <input type="text" name="Text" id="Text" required minlength="5" maxlength="100">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" required minlength="5" maxlength="100">
-                    <label for="text_area">Cообщение</label>
+                    <div class="rel">
+                        <label for="Text" class="label">Имя</label>
+                    <input type="text" name="Text" id="Text" required minlength="5" maxlength="100" class="input_class">
+                    </div>
+                   <div class="rel">
+                     <label for="email" class="label">Email</label>
+                    <input type="email" name="email" id="email" required minlength="5" maxlength="100"  class="input_class">
+                   </div>
+                   <div class="rel">
+                     <label for="text_area" class="label">Cообщение</label>
                    <textarea name="text_area" id="text_area" ></textarea>
+                   </div>
                   <div class="sumbit">
-                     <button type="submit"><img src="/img/icon4.png" alt="" class="img_3">Отправить</button>
+                     <button type="submit" class="simbit_class">
+                        <img src="/img/icon4.png" alt="" class="img_3">
+                        <span class="submit_span">Отправить</span>
+                     </button>
                   </div>
                 </form>
             </div>
