--- a/project/index.html
+++ b/project/index.html
@@ -18,10 +18,10 @@
             <div class="header_menu">
                <nav>
                  <ul>
-                  <a href="#" >  <li class="active" >Главная</li></a>
-                   <a href="#"> <li>Проекты</li></a>
-                   <a href="#"> <li>Обо мне</li></a>
-                   <a href="#"> <li>Связаться</li></a>
+                  <a href="#section" >  <li class="active" >Главная</li></a>
+                   <a href="#sectioon2"> <li>Проекты</li></a>
+                   <a href="#section3"> <li>Обо мне</li></a>
+                   <a href="#section4"> <li>Связаться</li></a>
                    
                 </ul>
                </nav>
@@ -29,7 +29,7 @@
         </div>
     </header>
     <main>
-        <section class="wrapper">
+        <section class="wrapper" id="section">
             <div class="section_top">
                 <div class="img">
                     <a href=""><img src="/img/Drop your Memoji here.png" alt="" class="img_page1"></a>
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </section>
-        <section class="section_2">
+        <section class="section_2" id="sectioon2">
             <div class="page2">
                 <h1 class="page_h1">Последние проекты</h1>
                 <div class="images_pag">
@@ -115,7 +115,7 @@
             </div>
 
         </section>
-       <section class="page_3">
+       <section class="page_3" id="section3">
         <div class="page3_wrapper">
             <div class="omg_page_3"><img src="/img/avatar 2.png" alt=""></div>
             <div class="Text_page_3">
@@ -141,7 +141,7 @@ Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
         </div>
        </div>
        </section>
-       <section class="writting">
+       <section class="writting" id="section4">
         <img src="/img/test.png" alt="" class="iop">
         <div class="writting_header">
             
@@ -159,7 +159,7 @@ Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
                    </div>
                    <div class="rel">
                      <label for="text_area" class="label">Cообщение</label>
-                   <textarea name="client_message" id="text_area" ></textarea>
+                   <textarea name="client_message" id="text_area"  class="textarr"></textarea>
                    </div>
                   <div class="sumbit">
                      <button type="submit" class="simbit_class">
