--- a/project/index.html
+++ b/project/index.html
@@ -141,8 +141,8 @@ Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
         </div>
        </div>
        </section>
-       <section class="writting" id="section4">
-        <img src="/img/test.png" alt="" class="iop">
+       <section class="writting" >
+        <img src="/img/test.png" alt="" class="iop" >
         <div class="writting_header">
             
             <div class="email">
